devops/drone/drone-issuer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drone
