devops/drone/drone-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drone-server
  name: drone-server
  namespace: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-server
  template:
    metadata:
      labels:
        app: drone-server
    spec:
      containers:
      - name: drone-server
        image: drone/drone:2
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: drone-persistent-storage
          mountPath: /data
      volumes:
      - name: drone-persistent-storage
        persistentVolumeClaim:
          claimName: drone-server-pvc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner
  namespace: drone
  labels:
    app: drone-runner
spec:
  selector:
    matchLabels:
      app: drone-runner
  replicas: 1
  template:
    metadata:
      labels:
        app: drone-runner
    spec:
      containers:
      - name: drone-runner
        image: drone/drone-runner-kube:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-vault
  namespace: drone
  labels:
    app: drone-vault
spec:
  selector:
    mtachLabels:
      app: drone-vault
  replicas: 1
  template:
    metadata:
      labels:
        app: drone-vault
    spec:
      containers:
      - name: drone-vault
        image: drone/vault:latest
        ports:
        - name: http
          port: 3000
