devops/drone/drone-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: drone-server
  name: drone-server
  namespace: drone
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: drone-server
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: drone-vault
  namespace: drone
  labels:
    app: drone-vault
spec:
  ports:
  - name: vault-http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: drone-vault
  type: ClusterIP
