devops/drone/drone-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
 name: drone-ingress-websecure
 namespace: drone
 annotations:
   traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
 entryPoints:
   - websecure
 routes:
   - match: Host(`drone.example.io`) && PathPrefix(`/`)
     kind: Rule
     services:
       - name: drone-server
         passHostHeader: true
         port: 80
 tls:
   secretName: drone-secret
